--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="" href="#"><img src="assets/img/imgs/hack.PNG"></a>
+					<a class="" href="index.html"><img src="assets/img/imgs/hack.PNG"></a>
 				</div>
 		
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -108,15 +108,15 @@
 				  <button class="btn bg-red c-white dropdown-toggle" type="button" data-toggle="dropdown">Create a Topic
 				  <span class="caret"></span></button>
 				  <ul class="dropdown-menu">
-				    <li><a class="btn" data-toggle="modal" href='#post'>Create a Post</a></li>
+				    <li><a class="btn" href='topic.html'>Create a Post</a></li>
 				    <li class="divider"></li>
-				    <li><a class="btn" data-toggle="modal" href='#poll'>Create a Poll</a></li>
+				    <li><a class="btn" href='poll.html'>Create a Poll</a></li>
 				  </ul>
 				</div>
 			</div>
 
 			<!-- moder for topic -->
-			<div class="modal fade" id="post">
+			<!-- <div class="modal fade" id="post">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
@@ -166,7 +166,7 @@
 								        <span>Browse</span>
 
 								    <input type="file" name="file">
-								    </span> -->
+								    </span> 
 								</div>
 							</div>
 						</div>
@@ -177,9 +177,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- moder for poll -->
-			<div class="modal fade" id="poll">
+			<!-- <div class="modal fade" id="poll">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
@@ -283,20 +283,20 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- end -->
 			<div class="col-md-8"></div>
 			<div class="col-md-2 col-xs-6">
 				<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">All Categories
 				  <span class="caret"></span></button>
 				  <ul class="dropdown-menu">
-				    <li><a href="#">Agro</a></li>
-				    <li><a href="#">Artificial Intelligence</a></li>
-				    <li><a href="#">E-commerce</a></li>
-				    <li><a href="#">Education</a></li>
-				    <li><a href="#">Fintech</a></li>
-				    <li><a href="#">Health</a></li>
-				    <li><a href="#">Virtual Reality</a></li>
+				    <li><a href="agro.html">Agro</a></li>
+				    <li><a href="artificial.html">Artificial Intelligence</a></li>
+				    <li><a href="ecommerce.html">E-commerce</a></li>
+				    <li><a href="education.html">Education</a></li>
+				    <li><a href="fintech.html">Fintech</a></li>
+				    <li><a href="health.html">Health</a></li>
+				    <li><a href="virtual.html">Virtual Reality</a></li>
 				  </ul>
 				</div>
 			    </li>
@@ -348,7 +348,7 @@
 	                            <ul class="p-l-0">
 	                            	<li class="dropup">
 										<div class="img">
-											<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/icons/Menu.png" class="img-responsive" style="max-width: 40px; max-height:40px; float: left; display: inline; text-align:center; margin-top: 18px;"><b class=""></b></a>
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="assets/img/icons/Menu.png" class="img-responsive mwidth-16 mm-l-_10" style="max-width: 40px; max-height:40px; float: left; display: inline; text-align:center; margin-top: 18px;" ><b class=""></b></a>
 											<ul class="dropdown-menu drop">
 												<li ">
 													<div>
@@ -557,13 +557,13 @@
     <script type="text/javascript" src="assets/js/main.js"></script>
     <script type="text/javascript">
 
-    
+    /*
         $("[data-toggle=popover]").popover({
     html: true, 
     content: function() {
           return $('#popover-content').html();
         }
-});
+});*/
 
 
  		app.imageHandler();
