--- a/topic.html
+++ b/topic.html
@@ -14,64 +14,67 @@
 <body>
 
 
-<div class="col-md-4"></div>
+	<div class="col-md-4"></div>
 
-<div class="col-md-4 m-t-60">
-	<form action="" method="POST" role="form">
-		<div class="form-group">
-			<label for="">Title</label>
-			<input type="text" class="form-control" id="" placeholder="title">
-		</div>
-		<div class="form-group">
-			<label for="">Description</label>
-			<textarea name="" id="input" class="form-control" rows="3" required="required" placeholder="Describe your post"></textarea>
-		</div>
-	
-	<div class="row">
-		<div class="col-md-6">
-			<p>Tag post category</p>
-		</div>
-		
-		<div class="col-md-6">
-			<p class="pull-right">Upload image for post<span class="c-grey"> (optional)</span></p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6">
-			<select name="" id="input" class="form-control" required="required">
-				<option>Select tag</option>
-				<option value="">Health</option>
-				<option value="">Fintech</option>
-				<option value="">Agro</option>
-				<option value="">Education</option>
-				<option value="">E-commerce</option>
-				<option value="">Virtual reality</option>
-				<option value="">Artificial Intelligence</option>
-			</select>
-		</div>
-		<div class="col-md-6">
-			<div class="picture" style="float: right;">
-		    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAhRsMOMIvyfi-rD07o9Fa6DzkaeahYPqYu_KWfNtW1ShsxGxa"
-		    class="picture_src" id="picture_preview" alt="" >
-			<input class="img_container" type="file" id="upload" name="file">
+	<div class="col-md-4 m-t-60 bs">
+		<div class="m-t-10">
+			<form action="" method="POST" role="form">
+			<div class="form-group">
+				<label for="">Title</label>
+				<input type="text" class="form-control" id="" placeholder="title">
+
+
+
+			<div class="form-group">
+				<label for="">Description</label>
+				<textarea name="" id="input" class="form-control" rows="3" required="required" placeholder="Describe your post"></textarea>
 			</div>
-			<!-- <span class="btn btn-success fileinput-button pull-right">
-		        <span>Browse</span>
-
-		    <input type="file" name="file">
-		    </span> -->
 		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p>Tag post category</p>
+			</div>
+			
+			<div class="col-md-6">
+				<p class="pull-right">Upload image for post<span class="c-grey"> (optional)</span></p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<select name="" id="input" class="form-control" required="required">
+					<option>Select tag</option>
+					<option value="">Health</option>
+					<option value="">Fintech</option>
+					<option value="">Agro</option>
+					<option value="">Education</option>
+					<option value="">E-commerce</option>
+					<option value="">Virtual reality</option>
+					<option value="">Artificial Intelligence</option>
+				</select>
+			</div>
+			<div class="col-md-6">
+				<div class="picture" style="float: right;">
+			    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAhRsMOMIvyfi-rD07o9Fa6DzkaeahYPqYu_KWfNtW1ShsxGxa"
+			    class="picture_src" id="picture_preview" alt="" >
+				<input class="img_container" type="file" id="upload" name="file">
+				</div>
+				<!-- <span class="btn btn-success fileinput-button pull-right">
+			        <span>Browse</span>
+
+			    <input type="file" name="file">
+			    </span> -->
+			</div>
+		</div>
+
+		<div class="col-md-7"></div>
+		<div class="col-md-5 m-t-10 m-b-10">
+		<button type="button" class="no-bd bg-white c-grey">Cancel</button>
+		<button type="button" class="btn bg-red c-white">Create</button>
+		</div>
+		</form>
 	</div>
 
-	<div class="col-md-7"></div>
-	<div class="col-md-5">
-	<button type="button" class="no-bd bg-white c-grey">Cancel</button>
-	<button type="button" class="btn bg-red c-white">Create</button>
-	</div>
-	</form>
-</div>
-
-<div class="col-md-4"></div>
+	<div class="col-md-4"></div>
 
 <script src="assets/js/jquery-3.1.1.min.js"></script>
 
