--- a/agro.html
+++ b/agro.html
@@ -108,15 +108,15 @@
 				  <button class="btn bg-red c-white dropdown-toggle" type="button" data-toggle="dropdown">Create a Topic
 				  <span class="caret"></span></button>
 				  <ul class="dropdown-menu">
-				    <li><a class="btn" data-toggle="modal" href='#post'>Create a Post</a></li>
+				    <li><a class="btn" href='topic.html'>Create a Post</a></li>
 				    <li class="divider"></li>
-				    <li><a class="btn" data-toggle="modal" href='#poll'>Create a Poll</a></li>
+				    <li><a class="btn" href='poll.html'>Create a Poll</a></li>
 				  </ul>
 				</div>
 			</div>
 
 			<!-- moder for topic -->
-			<div class="modal fade" id="post">
+			<!-- <div class="modal fade" id="post">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
@@ -166,7 +166,7 @@
 								        <span>Browse</span>
 
 								    <input type="file" name="file">
-								    </span> -->
+								    </span> 
 								</div>
 							</div>
 						</div>
@@ -177,9 +177,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- moder for poll -->
-			<div class="modal fade" id="poll">
+			<!-- <div class="modal fade" id="poll">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
@@ -283,7 +283,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<!-- end -->
 			<div class="col-md-8"></div>
 			<div class="col-md-2 col-xs-6">
